Closed Bug 63520 Opened 24 years ago Closed 24 years ago

cmsutil: NSS_Init failure in S/MIME QA on NT (WinNT and Win95 build)

Categories

(NSS :: Tools, defect)

x86
Windows NT
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: sonja.mirtitsch, Assigned: bugz)

Details

********************* S/MIME testing  ****************************
cmsutil: NSS_Init failed: security library: bad database.
cmsutil -S -N Alice -i alice.txt -d
w:/nss/nsstip/builds/20001221.1/blowfish_NT4.0_Win95/mozilla/tests_results/security/sonjant.4/smime/alicedir
-p nss -o alice.sig
cmsutil -D -i alice.sig -d
w:/nss/nsstip/builds/20001221.1/blowfish_NT4.0_Win95/mozilla/tests_results/security/sonjant.4/smime/bobdir
-o alice.data1
diff alice.txt alice.data1
Signing attached message Passed
cmsutil -E -r bob@bogus.com -i alice.txt -d
w:/nss/nsstip/builds/20001221.1/blowfish_NT4.0_Win95/mozilla/tests_results/security/sonjant.4/smime/alicedir
-p nss -o alice.env
cmsutil -D -i alice.env -d
w:/nss/nsstip/builds/20001221.1/blowfish_NT4.0_Win95/mozilla/tests_results/security/sonjant.4/smime/bobdir
-p nss -o alice.data1
diff alice.txt alice.data1
Enveloped Data Passed
cmsutil -O -r "Alice,bob@bogus.com,dave@bogus.com" -d
w:/nss/nsstip/builds/20001221.1/blowfish_NT4.0_Win95/mozilla/tests_results/security/sonjant.4/smime/alicedir
> co.der
cmsutil -D -i co.der -d
w:/nss/nsstip/builds/20001221.1/blowfish_NT4.0_Win95/mozilla/tests_results/security/sonjant.4/smime/bobdir
Sending certs-only message Passed
cmsutil -C -i alice.txt -e alicehello.env -d
w:/nss/nsstip/builds/20001221.1/blowfish_NT4.0_Win95/mozilla/tests_results/security/sonjant.4/smime/alicedir
-r "bob@bogus.com" > alice.enc
cmsutil -D -i alice.enc -d
w:/nss/nsstip/builds/20001221.1/blowfish_NT4.0_Win95/mozilla/tests_results/security/sonjant.4/smime/bobdir
-e alicehello.env -p nss -o alice.data2
Encrypted-Data message Passed
Running Z:/sonjaNT/environ.ksh
RSAPERF: WINNT4.0_OPT.OBJ 300 iterations in 4.547 s one operation every 15156 us
changed cmsutil to dump usage if no args are passed, before trying anything else
(like NSS_Init).
Will mark as fixed when QA done.
Target Milestone: --- → 3.2
I assume this is fixed, haven't seen QA failures.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.