dump usage before doing anything when no args passed, bug 63520